Minor fixes and UI changes

--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Tip match</title>
+        <base href="/">
     </head>
     <body>
         <div id="app">
