Rules page and minor fixes

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Tip match</title>
+        <title>Prediction game 2018</title>
         <base href="/">
     </head>
     <body>
